--- a/style.css
+++ b/style.css
@@ -1,76 +1,58 @@
-body *{ 
-    text-align: center;
-  } 
-  
+body {
+    font-family: 'Arial', sans-serif;
+    font-size: 10px;
+    background-color: #EBF4F6;
+    /* background-image: url("../image/Picture4.png"); */
+    /* background-size: cover; 
+    background-repeat: no-repeat; 
+    background-attachment: fixed; 
+    background-position: bottom center;  */
+}
 h1 {
-    font-family: "Abril Fatface", serif;
-    font-style: bold;
-    font-weight: 1200;
-    font-size: 80px;
+    /* font-weight: bold; */
+    font-size: 50px;
+    margin-bottom: 10px;
     text-align: center;
-    padding: 50px; 
-    color : #6F8FAF;
+    font-family: nave;
 }
 
 h2 {
-    font-family: "Abril Fatface", serif;
-    font-style: bold;
-    font-weight: 1200;
-    font-size: 35px;
-    text-align: center;
-    background: #B6D0E2;
-    color : white;
-    padding: 20px; 
-}
-
-P {
-    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
     font-size: 20px;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
 }
 
-body {
-    background-color: #4682B4;
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    width: 90%;
+    max-width: 1300px;
+    max-height: 1200px;
+    margin: auto;
 }
 
-.page {
-    max-width: 1410px; 
-    width: 100%;
-    background-color: white; 
-    margin: auto; 
-    padding: 50px; 
-    padding-top: 35px;
-}
-
-.vis-container {
+.chart-row {
+    display: flex; 
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 40px;
     width: 100%; 
-    text-align: center;
-} 
-
-.description h2,
-h1 {
-    font-family: "Abril Fatface", serif;
-    font-style: bold;
-    margin-top: 0px;
 }
 
-.description-right {
-    padding-left: 20px;
-    font-size: 20px;
+.chart {
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    
+    margin-bottom: 40px;
+    width: 90%; 
+    max-width: 1300px;
+    max-height: 1200px;
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
-.description-left {
-    padding-top: 100px;
-    text-align: center;
-    font-size: 20px;
-}
-
-.pure-g {
-    margin-bottom: 25px;
-}
-
-.small-font p {
-    font-size: 16px;
-}
-
-
-  
