--- a/style.css
+++ b/style.css
@@ -8,51 +8,82 @@ body {
     background-attachment: fixed; 
     background-position: bottom center;  */
 }
-h1 {
-    /* font-weight: bold; */
-    font-size: 50px;
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.card {
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    padding: 10px;
+}
+
+.card-header {
+    background-color: #a50f15;
+    color: #fff;
+    padding: 20px;
+    border-radius: 5px 5px 0 0;
+    text-align: center;
+    font-size: 12;
+}
+
+.card-body {
+    font-size: 13px;
+    padding: 0px;
+    padding-bottom: 0px;
+    line-height: 1.5;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.flex-container {
+    display: flex;
+    text-align: justify;
+}
+
+h1 { 
+    font-weight: bold;
+    font-size: 40px; 
     margin-bottom: 10px;
     text-align: center;
-    font-family: nave;
+    font-family:'Times New Roman', Times, serif;
 }
 
 h2 {
     font-weight: bold;
     font-size: 20px;
     text-align: center;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Arial', sans-serif;
+} 
+
+h3 {
+    font-weight: bold;
+    font-size: 13px;
+    text-align: center;
+    font-family: 'Arial', sans-serif;
+} 
+
+h4 {
+    font-weight:100;
+    font-size: 13px;
+    text-align: left;
+    font-family: 'Arial', sans-serif;
+    color: #B7B7B7;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-    width: 90%;
-    max-width: 1300px;
-    max-height: 1200px;
-    margin: auto;
+.singapore_text {
+    font-size: 13px;
+    color: #A04747;
+    font-weight: bold;
 }
 
-.chart-row {
-    display: flex; 
-    justify-content: space-between;
-    align-items: flex-start;
-    margin-bottom: 40px;
-    width: 100%; 
-}
-
-.chart {
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-    
-    margin-bottom: 40px;
-    width: 90%; 
-    max-width: 1300px;
-    max-height: 1200px;
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+.bold_text {
+    font-size: 13px;
+    font-weight: bold;
 }
