--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Arial', sans-serif;
     font-size: 10px;
-    background-color: #FBD1D1;
+    background-color: #ffe4e8;
     /* background-image: url("../image/Picture4.png"); */
     /* background-size: cover; 
     background-repeat: no-repeat; 
