--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h4 {
     font-size: 13px;
     text-align: left;
     font-family: 'Arial', sans-serif;
-    color: #B7B7B7;
+    color: #0a0a0a;
 }
 
 .singapore_text {
