--- a/style.css
+++ b/style.css
@@ -77,6 +77,12 @@ h4 {
     color: #0a0a0a;
 }
 
+.malaysia_text {
+    font-size: 13px;
+    color: #ff1493;
+    font-weight: bold;
+}
+
 .singapore_text {
     font-size: 13px;
     color: #A04747;
